== Affiliates - Changelog ==

= 4.0.5 =
* Added conditional check for registration message in registration template.
* Replaced uses of get_bloginfo( 'url' ) with home_url().
* Cleaned up unused code.
* Revised the affiliates_bloginfo() function and added optional filters.

= 4.0.4 =
* Minor security improvements related to escaping output.
* Fixed various PHP code validation issues.
* Fixed various Javascript code validation issues.
* Fixed several code documentation issues.

= 4.0.3 =
* Code and documentation revision and improvements.
* Updated Spanish translation.
* Simplified Add-ons section.

= 4.0.2 =
* Updated the Indonesian translation.
* Updated the German translation.
* Updated the Spanish translation.
* Added improvements for responsiveness.
* Updated description in the registration admin section.
* Added a missing call to prepare().
* Improved handling of field/attribute usage related to payment emails.
* Fixed an issue with validating encoded affiliate id after affiliates_parse_request_affiliate_id filter applied.

= 4.0.1 =
* Added improvements for responsiveness on small screen sizes.

= 4.0.0 =
* This is a major new release with exciting new features.
  Following usual good practice, make sure to BACK UP your site and database before upgrading!
* Introduces the new Affiliates Dashboard and new Dashboard Sections.
* Added support for new customizable dashboard templates.
* Added new dashboard and dashboard section blocks.
* Added new dashboard and dashboard section shortcodes.
* Added several performance and usability improvements.
* Cleaned up code and made many internal improvements.
* Updated and added missing code documentation.
* Updated the translation template.
* Updated the German translation.
* Added options to the [affiliates_earnings] shortcode.
* Updated the affiliate area generation to use the new dashboard.
* Added additional currency codes and fixed an issue with the filter being called to early to affect the list.